# mjml_builder

./: .gitignore  LICENSE  README.md  pyproject.toml
mjml_builder/: builder.py
mjml_builder/components/: base.py  containers.py  elements.py
mjml_builder/nodes/: __init__.py  base.py  containers.py  elements.py
